--- a/package.json
+++ b/package.json
@@ -2,12 +2,54 @@
   "name": "@dvirus-js/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "-- create-angular-lib": "npx nx g @nx/angular:library <package name with path> --publishable --importPath=@dvirus-js/angular/<package name>",
+    "-- create-ts-lib2": "npx nx g @nx/angular:library <package name with path> --publishable --importPath=@dvirus-js/angular/<package name>",
+    "-- create-ts-lib": "npx nx g @nx/js:library <package name with path> --publishable --importPath=@dvirus-js/<package name>"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/core": "~21.1.0",
+    "@angular-devkit/schematics": "~21.1.0",
+    "@angular/cli": "~21.1.0",
+    "@angular/compiler-cli": "~21.1.0",
+    "@angular/language-service": "~21.1.0",
+    "@eslint/js": "^9.8.0",
+    "@nx/angular": "^22.5.1",
+    "@nx/eslint": "^22.5.1",
+    "@nx/eslint-plugin": "22.5.1",
     "@nx/js": "22.5.1",
     "@nx/workspace": "22.5.1",
-    "nx": "22.5.1"
+    "@schematics/angular": "~21.1.0",
+    "@swc-node/register": "~1.11.1",
+    "@swc/core": "~1.15.5",
+    "@swc/helpers": "~0.5.18",
+    "@typescript-eslint/utils": "^8.40.0",
+    "angular-eslint": "^21.0.1",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~21.1.0",
+    "nx": "22.5.1",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
+    "prettier": "~3.6.2",
+    "tslib": "^2.3.0",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "verdaccio": "^6.0.5"
+  },
+  "dependencies": {
+    "@angular/common": "~21.1.0",
+    "@angular/compiler": "~21.1.0",
+    "@angular/core": "~21.1.0",
+    "@angular/forms": "~21.1.0",
+    "@angular/platform-browser": "~21.1.0",
+    "@angular/router": "~21.1.0",
+    "rxjs": "~7.8.0"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
