--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
     "@nx/eslint": "^22.5.1",
     "@nx/eslint-plugin": "22.5.1",
     "@nx/js": "22.5.1",
+    "@nx/vite": "22.5.1",
+    "@nx/web": "22.5.1",
     "@nx/workspace": "22.5.1",
     "@schematics/angular": "~21.1.0",
     "@swc-node/register": "~1.11.1",
     "@swc/core": "~1.15.5",
     "@swc/helpers": "~0.5.18",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
+    "@vitest/ui": "^4.0.0",
+    "ajv": "^8.0.0",
     "angular-eslint": "^21.0.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jiti": "2.4.2",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~21.1.0",
     "nx": "22.5.1",
@@ -38,7 +44,10 @@
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
-    "verdaccio": "^6.0.5"
+    "verdaccio": "^6.0.5",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^4.0.0"
   },
   "dependencies": {
     "@angular/common": "~21.1.0",
