--- a/packages/angular/signals/package.json
+++ b/packages/angular/signals/package.json
@@ -5,5 +5,8 @@
     "@angular/common": "^21.1.0",
     "@angular/core": "^21.1.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  }
 }
