--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,5 +4,8 @@
   "type": "module",
   "main": "./index.js",
   "types": "./index.d.ts",
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": {
+    "access": "public"
+  }
 }
