--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@dvirus-js/angular/signals": ["packages/angular/signals/src/index.ts"],
-      "@dvirus-js/utils": ["packages/utils/src/index.ts"]
+      "@dvirus-js/utils": ["packages/utils/src/index.ts"],
+      "@dvirus-js/angular": ["packages/angular/angular-utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
