--- a/packages/angular/angular-utils/package.json
+++ b/packages/angular/angular-utils/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^21.1.0",
-    "@angular/core": "^21.1.0"
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.0",
+    "@nx/dependency-checks": "^22.5.1"
   },
   "sideEffects": false
 }
