--- a/packages/angular/angular-utils/package.json
+++ b/packages/angular/angular-utils/package.json
@@ -2,10 +2,8 @@
   "name": "@dvirus-js/angular",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^21.1.0",
     "@angular/core": "^21.1.0",
-    "@angular/forms": "^21.1.0",
-    "@nx/dependency-checks": "^22.5.1"
+    "@angular/forms": "^21.1.0"
   },
   "sideEffects": false
 }
