--- a/nx.json
+++ b/nx.json
@@ -35,7 +35,8 @@
       "generatorOptions": {
         "currentVersionResolver": "git-tag",
         "specifierSource": "conventional-commits"
-      }
+      },
+      "conventionalCommits": true
     },
     "projects": ["*"],
     "changelog": {
